--- a/minimax.tex
+++ b/minimax.tex
@@ -5,8 +5,8 @@
 \usepackage{ijcai21}
 \usepackage{times}
 \usepackage{soul}
+\usepackage[hidelinks,hypertexnames=false]{hyperref}
 \usepackage{amsthm}
-\usepackage[hidelinks]{hyperref}
 
 %%% Load required packages here (note that many are included already).
 \input{preamble/packages}
