--- a/cover letter/resubmission.tex
+++ b/cover letter/resubmission.tex
@@ -37,20 +37,19 @@ Dear editors and reviewers,
 We have submitted this article for the first time to IJCAI 2020 (with submission ID 7094). The submission was evaluated by four reviewers; the overall assessment (full reviews are included in Section \ref{sec:reviews-ijcai}) were: 
 \begin{itemize}
 \item R1: Accept {\em (good paper, I can argue for accepting it)};
-\item R2: Weak accept {\em (marginally above the acceptance theshold, rejecting it would not be that bad)};
+\item R2: Weak accept {\em (marginally above the acceptance threshold, rejecting it would not be that bad)};
 \item R3: Weak reject {\em (marginally below the acceptance threshold, accepting it would not be that bad)}; and
 \item R4:  Reject {\em (Not good enough, I can argue for rejecting it)}.
 \end{itemize}
 
-%from R1, Accept (good paper, I can argue for accepting it); from R2, Weak accept (marginally above the acceptance theshold, rejecting it would not be that bad); from R3, Weak reject (marginally below the acceptance threshold, accepting it would not be that bad); and from R4, Reject (Not good enough, I can argue for rejecting it). 
-The strongest criticisms from the last two reviewers (R3 and R4) and, from R3, that we should have improved the presentation with a larger example and expanded the discussion (R3 incorrectly thought that we had room to spare within the constraints imposed by IJCAI);  R4 found that our literature review omitted important related works, that the results in the paper were incremental in nature; and that the main contribution or take away message was not clearly stated in the paper. 
+The strongest criticisms came from the last two reviewers (R3 and R4): R3 pointed out that we should have improved the presentation with a larger example and expanded the discussion (R3 incorrectly thought that the IJCAI page limit was 7 instead of 6, excluding the additional page for references);  R4 found that our literature review omitted important related works, that the results in the paper were incremental in nature and that the main contribution or take away message was not clearly stated in the paper. 
 
 The metareview pointed out that {\em “One might view the work as somewhat incremental, but there is some substantial solid work here”}; but recommended rejection because of 1) the very brief discussion of the empirical evaluation and 2) the incomplete literature review. The metareviewer also commented that {\em “after some further work on the paper there's a reasonable chance that it could be accepted for another high quality conference.”}
 
 \medskip
-Following the IJCAI rejection we extended the literature review and improved the experimental section %(also taking advantage of the two additional pages), 
-and submitted the resulting work to AAMAS 2021 (with submission ID 554). 
-Our AAMAS submission received the following evaluations (full reviews are given in Section \ref{sec:reviews-aamas}):
+\paragraph*{First improvements:}Following IJCAI rejection we reworked the paper trying to solve the issues mentioned by reviewers: we extended the literature review adding a new dedicated section; we improved the experimental section increasing the size of the experiments, adding a new strategy and describing thoroughly the results obtained. We also added more figures and tables with the idea of giving a more immediate understanding of the experimental results. %(also taking advantage of the two additional pages), 
+
+We submitted the resulting work to AAMAS 2021 (with submission ID 554) receiving the following evaluations (full reviews are given in Section \ref{sec:reviews-aamas}):
 \begin{itemize}
 \item R1: {\em poor (4, good attempt but too many concerns, so probably should be rejected)};
 \item R2: {\em poor (4, good attempt but too many concerns, so probably should be rejected)}; and
@@ -74,6 +73,7 @@ Compared to the submission to AAMAS 2021, and thanks to the reviews, we have bro
 	\item We integrated the Related Works section into the Introduction to save space, but kept all the references we added following the earlier criticisms (in the IJCAI submission) about the missing references to the literature.
 	\item We went beyond impartial culture by testing our heuristics on real data. The results show that the number of questions to be asked is much smaller with real data than with impartial culture, as expected.
 	\item We changed the phrasing of some of our conclusions that were too general.
+	\item \commentBN{"Shouldn't we add that we removed proofs and tables?"}
 \end{itemize}
 
 \section{Submission to IJCAI 2020} 
