Further reduction and small modifs

--- a/biblio.bib
+++ b/biblio.bib
@@ -7,6 +7,14 @@
   year      = {2016}
 }
 
+@book{colell_microeconomic_1995,
+  title={Microeconomic Theory},
+  author={Mas-Colell, Andreu and Whinston, Michael Dennis and Green, Jerry R},
+  year={1995},
+  publisher={Oxford University Press},
+  isbn = {978-0-195-10268-0}
+}
+
 @Article{Boutilier2006,
   title = {Constraint-based optimization and utility elicitation using the minimax decision criterion},
   journal = {Artificial Intelligence},
